# march-madness-moe

./: .env.example  .gitignore  MODEL_IMPLEMENTATION.md  README.md  plan.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_single_tree_baseline.ipynb  04_multi_expert_dev.ipynb  05_gating_network_dev.ipynb  06_backtesting_analysis.ipynb  07_mc_simulation_dev.ipynb  08_bracket_output.ipynb
scripts/: build_features.py  predict_bracket.py  run_backtest.py  scrape_kenpom.py  train_baseline.py  train_experts.py
src/: config.py
src/bracket/: predictor.py  structure.py  visualizer.py
src/data/: kaggle_loader.py  merge.py  scraper.py  tournament_data.py
src/evaluation/: backtester.py  calibration.py  metrics.py
src/features/: __init__.py  context_features.py  kenpom_deltas.py  pipeline.py  ranking_criteria.py
src/models/: gating_network.py  moe_ensemble.py  multi_task_experts.py  ranking_loss.py  tree_expert.py
src/simulation/: log5.py  matchup_builder.py  mc_engine.py
src/utils/: team_names.py
